--- a/expense_frontend/Dockerfile
+++ b/expense_frontend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 # Copy the package.json and package-lock.json files
 COPY package*.json ./
 
-# Install the dependencies
+# Install the de
 RUN npm install
 
 # Copy the app files
